--- a/overview/concepts-architecture/architecture-diagram.mdx
+++ b/overview/concepts-architecture/architecture-diagram.mdx
@@ -1,131 +1,161 @@
 ---
-title: "Architecture Overview"
-description: "Presents a high-level overview diagram (using mermaid syntax) illustrating key GoogleTest components—such as test runners, assertion modules, and the interplay between test definitions and mock capabilities—demonstrating data and control flow during test execution."
+title: "How GoogleTest Works: System Architecture"
+description: "Visualize the GoogleTest framework using a high-level mermaid diagram that illustrates the interplay between test cases, test runners, assertions, and external integrations. Grasp the workflow from code to test execution and reporting, and see where GoogleMock fits into the picture."
 ---
 
-# Architecture Overview
+# How GoogleTest Works: System Architecture
 
-GoogleTest's Architecture Overview presents a clear, high-level diagram illustrating the core components and their interactions within the framework. This page is designed to give you a concrete understanding of how GoogleTest processes tests—from test discovery through execution—highlighting key elements such as test runners, assertion modules, test definitions, and mocking capabilities. By seeing how data and control flow during test execution, you gain actionable insights into effective test design and debugging.
+## Visualizing the GoogleTest Framework
+
+GoogleTest offers a powerful C++ testing framework that streamlines your testing workflow from writing test cases through execution and reporting. This page provides a high-level overview of GoogleTest's system architecture through a clear diagram and descriptive explanation, helping you grasp how its core components interact to deliver robust testing capabilities.
+
+Whether you are a developer writing tests or integrating testing into your build system, understanding this architecture will empower you to make better use of GoogleTest's features and plan your testing strategy effectively.
 
 ---
 
-## At a Glance: The Architecture Diagram
+## Core Components of GoogleTest System Architecture
 
-This architecture diagram, expressed in Mermaid syntax, depicts the primary components of GoogleTest and their connections during the lifecycle of a test run:
+GoogleTest consists of several interacting components that work together seamlessly to manage, execute, and report on your tests. Understanding how GoogleTest orchestrates these elements helps demystify its operation and illustrates where GoogleMock fits in.
 
-- **Test Runner:** Orchestrates test discovery and execution flow.
-- **Test Definitions:** Code sections where users define tests and test fixtures.
-- **Assertion Modules:** Handle verification points, reporting successes or failures.
-- **Mocking Framework (gMock):** Facilitates the creation and verification of mock objects to isolate and control dependencies within tests.
+### Key Entities and Their Roles
+
+- **Test Cases & Test Suites**: You write individual test cases grouped into test suites to logically organize related tests.
+
+- **Test Runner (Main Function)**: GoogleTest provides a test runner that discovers and executes test cases automatically, managing test lifecycle events.
+
+- **Assertions and Expectations**: Within a test, you use assertions (like `EXPECT_EQ`, `ASSERT_TRUE`) to verify that specific conditions hold. Failures halt or report accordingly.
+
+- **Test Environment & Setup/TearDown**: Hooks allow setup before tests and cleanup afterward, ensuring isolated and reliable test runs.
+
+- **Test Reporters & Listeners**: GoogleTest ships with built-in formats for reporting test results; you can also add custom listeners.
+
+- **External Integrations**: GoogleTest integrates easily with build systems, IDEs, and continuous integration tools.
+
+- **GoogleMock (gMock)**: The mocking framework included with GoogleTest, enabling detailed control and verification of dependencies during tests.
+
+
+## High-Level Workflow
+
+1. **Test Discovery**: When you run a GoogleTest-based executable, the test runner automatically discovers all registered test suites and their test cases.
+2. **Test Execution**: The runner executes each test case, managing setup and teardown phases, and monitors assertions inside.
+3. **Expectation Validation**: For mocks created with GoogleMock, method calls are verified against set expectations throughout test execution.
+4. **Result Collection**: After tests run, event listeners and reporters gather results and output them to the console or other formats.
+5. **Integration Feedback**: The system's outputs integrate into IDEs or CI pipelines, facilitating rapid feedback on test status.
+
+---
+
+## Mermaid Diagram: GoogleTest System Architecture
 
 ```mermaid
 flowchart TD
+  %% Component Definitions
+  TestCode[Test Cases & Suites]
+  TestRunner[Test Runner (main())]
+  AssertionEngine[Assertions & Expectations]
+  SetupTeardown[Test Environment & Setup/TearDown]
+  TestReporter[Test Reporters & Listeners]
+  GoogleMock[GoogleMock Framework]
+  ExternalTools[External Integrations]
 
-  subgraph Runner["Test Runner"]
-    TR_Discovery["Automatic Test Discovery"]
-    TR_Execution["Test Execution Engine"]
-  end
+  %% Execution Flow
+  TestRunner --> TestCode
+  TestCode --> SetupTeardown
+  SetupTeardown --> AssertionEngine
+  AssertionEngine --> TestReporter
+  AssertionEngine --> GoogleMock
+  GoogleMock --> AssertionEngine
+  TestReporter --> ExternalTools
 
-  subgraph UserCode["User Test Code"]
-    TD_TestDefs["Test Definitions & Fixtures"]
-    TD_MockDefs["Mock Object Definitions"]
-  end
+  %% Additional Relationships
+  GoogleMock -->|Mocks Dependencies| TestCode
+  TestCode -->|Contains Assertions & Expectations| AssertionEngine
+  TestRunner -->|Reports to| TestReporter
 
-  subgraph Assertions["Assertions & Verifications"]
-    AM_Assertions["Assertion Handlers"]
-    AM_MockVerif["Mock Expectations & Verification"]
-  end
-
-  %% Control Flows
-  TR_Discovery -->|Discovers| TD_TestDefs
-  TR_Execution -->|Runs| TD_TestDefs
-
-  %% Interactions
-  TD_TestDefs -->|Uses APIs| AM_Assertions
-  TD_TestDefs -->|Uses Mock Objects| TD_MockDefs
-  TD_MockDefs -->|Verifies Expectations| AM_MockVerif
-  TR_Execution -->|Triggers Verifications| AM_MockVerif
-
-  %% Feedback
-  AM_Assertions -->|Reports Success/Failure| TR_Execution
-  AM_MockVerif -->|Reports Mock Call Results| TR_Execution
-
-  %% Legend
-  classDef component fill:#f0f8ff,stroke:#333,stroke-width:1px
-  class Runner,UserCode,Assertions component
+  %% Style
+  classDef service fill:#f9f,stroke:#333,stroke-width:2px,fill-opacity:0.1;
+  class TestRunner,TestReporter,GoogleMock,AssertionEngine,SetupTeardown,TestCode,ExternalTools service;
 ```
 
-This flow illustrates the orchestration and seamless integration at the heart of GoogleTest's testing infrastructure.
+This diagram outlines the primary entities in GoogleTest and how they interconnect during test execution.
 
 ---
 
-## Understanding the Architecture
+## Detailed Explanation of the Diagram
 
-### What Is This Page?
+### Test Runner
 
-This page explains how GoogleTest components work together during a test run — from discovering your tests to executing them with in-depth assertions and mock verifications. It provides a bird’s-eye view to help you grasp the framework's structure without diving into implementation complexity.
+The entry point to any GoogleTest executable is the Test Runner, typically the `main()` function provided or customized. It initializes the framework, manages command-line flags, discovers registered tests, and coordinates execution.
 
-### Why It Matters
+### Test Cases & Suites
 
-Seeing the architecture helps you understand how your test code integrates with the framework, enabling you to optimize your test design, debug effectively, and leverage GoogleTest’s full potential.
+Your tests reside here as logical units. Each test contains calls to assertions and, optionally, GoogleMock expectations. The runner invokes these in order.
 
-### Key Components Explained
+### Setup/TearDown
 
-| Component               | Role and User Value                                                                                     |
-|------------------------|------------------------------------------------------------------------------------------------------|
-| Test Runner            | Automatically discovers tests in your codebase and manages their execution seamlessly. Ensures reliable and orderly test runs without manual intervention. |
-| Test Definitions       | Where you author tests and test fixtures. Provides structure and context for your testing scenarios.   |
-| Assertion Modules      | Offer expressive macros and functions to verify expected behaviors. Capture failures promptly and clearly to expedite troubleshooting. |
-| Mocking Framework (gMock) | Lets you create mock classes and define behavior and expectations declaratively. Helps isolate dependencies and precisely control test interactions for robust, maintainable tests. |
+Before running each test, GoogleTest calls user-defined setup hooks to prepare the environment. Afterward, teardown hooks clean state to prevent test interference.
 
----
+### Assertions & Expectations
 
-## How It Works: Typical User Flow
+Assertions check conditions within tests and mark pass/fail states. GoogleMock expectations monitor interactions with mock objects, ensuring your code under test uses dependencies correctly.
 
-1. **Test Discovery:** When you trigger your test binary, the Test Runner automatically scans for available test cases and fixtures.
-2. **Test Execution:** The runner systematically invokes your test functions.
-3. **Assertions:** During execution, your tests call assertion macros that validate conditions and report pass/fail results through the assertion modules.
-4. **Mock Usage & Verification:** If mocks are used, they intercept interactions per expectations set by your test, verifying call counts, argument values, and sequences.
-5. **Result Reporting:** Test Runner aggregates results and reports the overall outcomes.
+### GoogleMock
 
-This flow ensures swift, robust unit test management without demanding manual bookkeeping from you.
+As an integrated mocking framework, GoogleMock seamlessly supports defining mock objects, expectations, and verifying that interactions occur as expected. It interacts closely with the assertion engine to report failures.
 
----
+### Test Reporters & Listeners
 
-## Practical Tips for Leveraging the Architecture
+This component manages how and where test results are reported. Standard output includes detailed success/failure information, but can be extended to generate XML reports, integrate with IDEs, or emit custom logs.
 
-- **Organize Tests Cleanly:** Define tests and test fixtures logically. This ensures seamless discovery and execution.
-- **Use Assertions Strategically:** Frame assertions to pinpoint expected outcomes explicitly, improving failure diagnostics.
-- **Embrace Mocks for Isolation:** Use mocks to simulate external dependencies, making tests fast, deterministic, and highly maintainable.
-- **Understand Sequencing:** Use features like sequences and strictness modifiers if requiring precise interaction order in tests.
-- **Explore Diagnostic Flags:** For deeper insight during failures, utilize verbosity and logging flags to trace mock calls and assertions.
+### External Integrations
+
+GoogleTest fits into your broader toolchain, integrating with build systems like Bazel or CMake, continuous integration pipelines, and IDEs for test discovery, execution, and failure reporting.
 
 ---
 
-## Getting Started with Architecture Awareness
+## Why Understanding This Matters
 
-Build familiarity with GoogleTest by reviewing the following related pages for practical details:
+- **Optimize Test Design**: Knowing the flow helps you write tests that integrate setup, assertions, and mocks efficiently.
 
-- [Feature Overview](https://google.github.io/googletest/overview/concepts-architecture/feature-overview.html) — Learn about core capabilities including mocking and assertion modules.
-- [What is GoogleTest?](https://google.github.io/googletest/overview/introduction-value/what-is-googletest.html) — Understand the purpose and core benefits.
-- [Mocking Reference](https://google.github.io/googletest/docs/reference/mocking.html) — Dive into the mocking APIs and usage.
+- **Debugging Confidence**: When tests fail, understanding which component reported the failure guides you in root cause analysis.
 
-Try creating simple test cases and run them to see the architecture components in action.
+- **Leverage GoogleMock**: Recognize where mocking fits in and how it cooperates with test execution to improve test precision.
 
----
-
-## Troubleshooting Common Confusions
-
-- If your tests are not discovered, check that your test cases are correctly declared using TEST or TEST_F macros.
-- For unexpected mock failures, verify that expectations are set before exercising mocks.
-- Use the `--gmock_verbose=info` flag to trace calls and understand why particular expectations are not met.
+- **Extend Reporting**: Utilize listeners and reporters to customize how you consume test feedback.
 
 ---
 
-*For source code and implementation details related to the architecture, see the [GoogleTest GitHub repository](https://github.com/google/googletest).*
+## Getting Started Preview
+
+When you’re ready to dive deeper, check the following pages to build your expertise and begin using GoogleTest effectively:
+
+- [GoogleTest Primer](../../primer.html) — Learn how to write simple tests and assertions.
+
+- [Advanced Topics](../../advanced.html) — Explore fine-grained control and advanced testing patterns.
+
+- [Creating and Using Mocks](../../guides/mocking-and-advanced-techniques/creating-and-using-mocks.html) — Learn how to leverage GoogleMock to write flexible, interaction-based tests.
+
+- [Running Tests & Interpreting Results](../../guides/getting-started/running-tests.html) — Understand test execution and report outputs.
+
+Insight into the system architecture forms the foundation for mastering the GoogleTest ecosystem.
 
 ---
 
-## Summary
+## Tips and Best Practices
 
-The Architecture Overview page connects the dots between GoogleTest’s core modules, revealing how your test code, assertions, mock objects, and the test runner orchestrate together. Equipped with this structural understanding, you are empowered to write expressive, maintainable tests and diagnose issues faster.
+- Start by writing simple test cases and gradually introduce mocks.
+
+- Use setup/teardown methods to maintain test independence.
+
+- Take advantage of GoogleMock for precise control over dependencies.
+
+- Customize test reporters to suit your team’s workflow.
+
+- Leverage command-line flags to control test discovery and execution order.
+
+---
+
+For a comprehensive guide to test writing, execution, and advanced usages, explore the full [GoogleTest documentation](../../index.md).
+
+---
+
+*This page focuses specifically on how GoogleTest components work and interact under the hood, providing clarity on the framework's architecture and operational flow.*
