--- a/overview/concepts-architecture/core-concepts-terminology.mdx
+++ b/overview/concepts-architecture/core-concepts-terminology.mdx
@@ -1,175 +1,204 @@
 ---
-title: "Core Concepts & Terminology"
-description: "Defines essential terms—such as test fixture, assertion, mock, expectation, fatal/non-fatal failure, and parameterized test—and briefly explains how these ideas underpin daily work with GoogleTest."
+title: "Essential Concepts & Terminology"
+description: "Get quick definitions and explanations for foundational terms: Test Cases, Assertions, Fixtures, Parameterized Tests, Mocks, Death Tests, and Test Runners. This reference makes it easy to learn or refresh the vocabulary required for efficient use of GoogleTest."
 ---
 
-# Core Concepts & Terminology
+# Essential Concepts & Terminology
 
-GoogleTest introduces a robust framework for C++ testing and mocking, underpinned by precise core concepts that empower you to write maintainable, expressive, and reliable tests. This page defines essential terms—such as test fixture, assertion, mock, expectation, fatal/non-fatal failure, and parameterized test—to ground your understanding of how these ideas support everyday usage of GoogleTest.
+Learn the foundational vocabulary that is key to effectively using GoogleTest and GoogleMock. This reference covers essential definitions and explanations for key testing concepts such as Test Cases, Assertions, Fixtures, Parameterized Tests, Mocks, Death Tests, and Test Runners. Understanding these terms will empower you to write robust tests, interpret results clearly, and leverage advanced GoogleTest features with confidence.
 
 ---
 
-## Understanding Key Terms
+## Test Cases
 
-Before diving into writing tests with GoogleTest, it’s crucial to understand the fundamental terms that shape its workflows and usage.
+A **Test Case** in GoogleTest groups one or more tests that share common setup and teardown code. A test case corresponds roughly to a test suite in other frameworks.
 
-### Test Fixture
-A **test fixture** is the environment and context in which tests run. It encapsulates common setup and teardown code shared by multiple test cases, allowing you to write cleaner and more maintainable tests. By grouping related tests under a fixture, you create a stable and consistent foundation for testing a component or a module.
+- It is created by inheriting from `::testing::Test` or using the `TEST` macro.
+- Allows grouping logically related tests.
+- Facilitates reuse of common code through fixtures.
 
 **Example:**
-
 ```cpp
-class MyTestFixture : public ::testing::Test {
+TEST(MathTest, Addition) {
+  EXPECT_EQ(1 + 1, 2);
+}
+```
+Here `MathTest` is the test case, and `Addition` is a test within it.
+
+---
+
+## Assertions
+
+Assertions are statements that verify conditions in your tests. They cause test failures when those conditions are not met.
+
+Key assertion types in GoogleTest:
+
+- `EXPECT_*`: Non-fatal failures; test continues.
+- `ASSERT_*`: Fatal failures; test aborts immediately.
+
+### Common Assertions Include:
+- `EXPECT_EQ(val1, val2)`: Checks equality.
+- `EXPECT_NE(val1, val2)`: Checks inequality.
+- `EXPECT_TRUE(condition)`, `EXPECT_FALSE(condition)`: Boolean checks.
+
+Assertions are used to verify actual output against expected results.
+
+**Example:**
+```cpp
+TEST(MyTest, ValueCheck) {
+  int value = GetValue();
+  ASSERT_GT(value, 0);  // Must be greater than 0 or test stops
+  EXPECT_EQ(value, 42); // Should be 42; logs failure but continues
+}
+```
+
+---
+
+## Fixtures
+
+A **Test Fixture** allows you to define a per-test set-up and tear-down environment. It helps when multiple tests share common objects or resources.
+
+- Created by deriving a class from `::testing::Test`.
+- Override `SetUp()` and `TearDown()` for initialization and cleanup.
+- Tests using a fixture use `TEST_F` macro.
+
+**Example:**
+```cpp
+class DatabaseTest : public ::testing::Test {
  protected:
   void SetUp() override {
-    // Common setup for multiple tests
+    db.Connect();
   }
-
   void TearDown() override {
-    // Cleanup
+    db.Disconnect();
   }
+  Database db;
 };
 
-TEST_F(MyTestFixture, TestA) {
-  // Test code here
-}
-
-TEST_F(MyTestFixture, TestB) {
-  // Another test sharing setup and teardown
+TEST_F(DatabaseTest, QueryTest) {
+  EXPECT_TRUE(db.Query("SELECT * FROM users"));
 }
 ```
 
-### Assertion
-An **assertion** is a statement in your test that verifies if a condition holds true. If an assertion fails, it marks the current test as failed. Assertions enable you to specify expected behaviors, outcomes, or states in your test code.
+---
 
-GoogleTest offers various assertion macros, such as `EXPECT_EQ`, `ASSERT_TRUE`, and more, tailored to different comparison needs.
+## Parameterized Tests
 
-### Mock
-A **mock** is a simulated object that mimics the behavior of real components in your code. Mocks replace real implementations to isolate the tested code and verify interactions, such as method calls, their arguments, and call sequences.
+Parameterized tests allow you to run the same test logic with different inputs.
 
-GoogleTest’s `gMock` provides powerful facilities to define mocks, specify behaviors and expectations.
+- Define a test fixture inheriting from `::testing::TestWithParam<T>` where `T` is the parameter type.
+- Use `TEST_P` macro to declare parameterized tests.
+- Instantiate tests with multiple parameter sets using `INSTANTIATE_TEST_SUITE_P`.
 
-### Expectation
-An **expectation** defines how a mock object’s method is expected to be invoked during the test. It specifies:
-
-- How many times the method should be called (cardinality)
-- What arguments it should be called with
-- The order relative to other expectations
-- The behavior to perform when the method is called (
-  e.g., return values, side effects)
-
-Expectations act as a contract your test enforces against the mock object to ensure the code behaves correctly.
-
-### Fatal vs Non-Fatal Failure
-- A **fatal failure** immediately aborts the current function (e.g., a test case), preventing further execution.
-- A **non-fatal failure** reports an error but allows the test to continue running.
-
-GoogleTest distinguishes these to give you control over how strictly failures influence test execution. For example, `ASSERT_*` macros produce fatal failures, while `EXPECT_*` macros produce non-fatal failures.
-
-### Parameterized Test
-**Parameterized tests** allow you to write one test logic that runs with different input values or parameters, increasing test coverage without duplication.
-
-GoogleTest supports parameterized tests by combining fixtures with template-based test definitions.
+This increases test coverage and avoids code duplication.
 
 **Example:**
-
 ```cpp
-class MyParamTest : public ::testing::TestWithParam<int> {};
+class IsEvenTest : public ::testing::TestWithParam<int> {};
 
-TEST_P(MyParamTest, IsEven) {
-  int value = GetParam();
-  EXPECT_EQ(value % 2, 0);
+TEST_P(IsEvenTest, CheckEvenness) {
+  int n = GetParam();
+  EXPECT_EQ(n % 2, 0);
 }
 
-INSTANTIATE_TEST_SUITE_P(
-  EvenTests,
-  MyParamTest,
-  ::testing::Values(2, 4, 6, 8));
+INSTANTIATE_TEST_SUITE_P(EvenNumbers, IsEvenTest, ::testing::Values(2, 4, 6, 8));
+```
+Here, `CheckEvenness` runs four times, once for each even number.
+
+---
+
+## Mocks (GoogleMock)
+
+Mock objects replace real objects during testing to verify interactions.
+
+- Defined by creating a mock class with methods mocked using `MOCK_METHOD`.
+- Used with `EXPECT_CALL()` to set expectations on method calls.
+- Allow specifying arguments, cardinalities (number of expected calls), and actions (return values or side effects).
+
+**Example:**
+```cpp
+class MockDatabase {
+ public:
+  MOCK_METHOD(bool, Connect, (), ());
+  MOCK_METHOD(int, GetRowCount, (), (const));
+};
+
+TEST(MyTest, Connection) {
+  MockDatabase db;
+  EXPECT_CALL(db, Connect()).Times(1).WillOnce(Return(true));
+  ASSERT_TRUE(db.Connect());
+}
+```
+Mocking helps isolate tested code, verify correct interaction patterns, and simulate error conditions.
+
+---
+
+## Death Tests
+
+Death tests verify that code terminates as expected under fatal conditions.
+
+- Use `EXPECT_DEATH(statement, regex)` or `ASSERT_DEATH`.
+- The second parameter is a regex matching the expected output on termination.
+
+They are useful for testing assertions and error handling that results in program exit.
+
+**Example:**
+```cpp
+TEST(FooDeathTest, CrashesOnNull) {
+  Foo* foo = nullptr;
+  EXPECT_DEATH({ foo->DoSomething(); }, "null pointer");
+}
 ```
 
 ---
 
-## Why These Concepts Matter
+## Test Runners
 
-These core terms are not just vocabulary. They form the foundation for your test design and implementation in GoogleTest:
+The **Test Runner** is responsible for:
 
-- **Test fixtures** keep your test code DRY and coherent.
-- **Assertions** validate code behavior clearly and expressively.
-- **Mocks** let you isolate components and verify interactions precisely.
-- **Expectations** provide fine control over test verifications, making tests reliable and insightful.
-- **Failure types** give you flexibility in managing test flow.
-- **Parameterized tests** enable broad coverage efficiently.
+- Discovering all registered tests.
+- Executing them.
+- Reporting results.
 
-Understanding these allows you to harness GoogleTest effectively, leading to confident, maintainable tests with clear intent.
+GoogleTest provides its own test runner which automatically runs all tests discovered by the macros. You can use test filters to run subsets.
 
----
-
-## Practical Tips & Common Pitfalls
-
-- Always define **virtual destructors** for interfaces or base classes you plan to mock. GoogleTest expects this for safe deletion via base pointers.
-- When mocking methods, use the `MOCK_METHOD` macro in the `public` section of the mock class, regardless of the original access modifiers.
-- Avoid over-specifying expectations which can lead to brittle tests. Use `ON_CALL` for specifying default behavior without requiring strict expectations.
-- Know when to use `EXPECT_*` vs `ASSERT_*` based on whether you want the test to stop immediately upon failure.
-- For parameterized tests, keep the parameter values meaningful and limited in number to ensure efficient and effective tests.
-
----
-
-## Related Concepts Illustrated
-
-```mermaid
-flowchart TD
-
-  Start([Start Testing]) --> Setup[Test Fixture Setup]
-
-  Setup --> Assertion{Assertion Condition}
-
-  Assertion -->|Pass| Proceed[Test Execution Continues]
-  Assertion -->|Non-Fatal Fail| Warn[Record Warning]
-  Assertion -->|Fatal Fail| Abort[Test Aborts]
-
-  Proceed --> MockUse[Mock Object Usage]
-
-  subgraph Mocking Flow
-    MockUse --> ExpectationCheck{Expectation Satisfied?}
-    ExpectationCheck -->|Yes| Success[Call Proceeds]
-    ExpectationCheck -->|No| Failure[Failure Recorded]
-  end
-
-  Success --> End([End Test])
-  Warn --> Proceed
-  Failure --> Proceed
-  Abort --> End
-
-  classDef decision fill:#f9f,stroke:#333,stroke-width:2px;
-  class Assertion,ExpectationCheck decision;
+Example of running tests with a filter:
+```bash
+test_binary --gtest_filter=MathTest.*
 ```
 
-The above diagram depicts a high-level flow of how test fixtures establish context, assertions evaluate conditions, and how mocks incorporate expectations to validate interaction.
+You can also control test execution via command-line flags for verbosity, shuffling tests, and generating XML reports.
 
 ---
 
-## Next Steps
+## Summary Table of Key Concepts
 
-Now that you’re familiar with these core concepts, explore the following documentation pages to deepen your practical understanding and begin your testing journey:
-
-- [What is GoogleTest?](../introduction-value/what-is-googletest) — See how the product is introduced and what it offers.
-- [Product Value Proposition](../introduction-value/value-proposition) — Learn about the benefits and why GoogleTest is a strong choice.
-- [Using Mock Objects Effectively](../../guides/writing-and-running-tests/using-mock-objects) — Apply these concepts into real, practical mocking.
-- [Mocking API Reference](../../api-reference/core-apis/mocking) — Detailed API documentation for mocks, expectations, and actions.
-
-
----
-
-> "Core concepts like test fixtures and mocks underpin your daily work with GoogleTest, enabling you to write precise, maintainable, and expressive tests that deliver confidence in C++ projects."
+| Term                 | Description                                          | Usage & Benefits                             |
+|----------------------|------------------------------------------------------|----------------------------------------------|
+| **Test Case**         | Grouping of related tests                            | Organizes tests, supports shared setup      |
+| **Assertion**         | Checks conditions, marks test pass/fail             | Verifies expected results                    |
+| **Fixture**           | Shared setup/teardown per test                        | Reduces duplication, manages resources       |
+| **Parameterized Test**| Run same test logic with various inputs               | Broad coverage, avoids repetition             |
+| **Mock Object**       | Test double to simulate and verify interactions      | Isolates code, tests behavior & edge cases   |
+| **Death Test**        | Validates that code exits/fails as expected          | Tests fatal error handling                     |
+| **Test Runner**       | Framework component running & reporting tests        | Automates execution & integrates with tools  |
 
 ---
 
-## Additional Resources
+## Practical Tips
 
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) — A beginner-friendly guide to mocking.
-- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html) — A handy reference to common mocking patterns and idioms.
-- [Mocking Reference](../../api-reference/core-apis/mocking) — Comprehensive API documentation.
+- **Use fixtures to manage complex setup:** Prevents duplication and helps maintain tests.
+- **Prefer `EXPECT_*` for recoverable checks:** Continue tests after failures to collect multiple errors.
+- **Use parameterized tests for multiple input scenarios:** Keeps tests concise and comprehensive.
+- **Mock only what’s needed:** To keep tests simple and focused.
+- **Run death tests separately if needed:** Some platforms require special handling.
 
 ---
 
-Feel empowered: mastering these terms leads to more effective control over test design, helping you to future-proof your test suite while improving its clarity and usefulness.
+## Where to Go Next
+
+- Explore [Writing Your First Test](../guides/getting-started/writing-first-test) to practice writing tests using these concepts.
+- Learn about [Mocking in GoogleMock](../reference/mocking.md) for deep understanding of mock objects and best practices.
+- Dive into [Feature Overview](../overview/concepts-architecture/feature-overview) to see how these concepts combine in GoogleTest architecture.
+
+---
